--- a/Task1.ipynb
+++ b/Task1.ipynb
@@ -813,12 +813,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "\n"
+    "Conclusion:\n",
+    "\n",
+    "The Titanic survival prediction model achieved an overall accuracy of 81%, indicating good predictive performance. The classification report highlights a slightly higher precision and recall for class 0 (non-survivors) compared to class 1 (survivors). This suggests that the model is slightly better at identifying non-survivors than survivors. While the results are promising, further optimization or exploration of alternative models and feature engineering could improve the prediction of survivor outcomes."
    ]
   }
  ],
