--- a/Task3.ipynb
+++ b/Task3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,6 +546,15 @@
    "source": [
     "print(\"\\nConfusion Matrix:\")\n",
     "print(confusion_matrix(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Conclusion\n",
+    "\n",
+    "The classification model achieved perfect performance with an F1-score of 1.00 across all classes (setosa, versicolor, and virginica). This indicates that the model is highly effective in accurately predicting the species, suggesting its suitability for the given dataset and task."
    ]
   }
  ],
